--- a/sreenevas-km-Iyengar copy.html
+++ b/sreenevas-km-Iyengar copy.html
@@ -13,16 +13,16 @@
 
 <body>
 
-    <div style="width:800px">
+    <div style="width:690px">
 
-        <table class="table" style="min-width:97%;">
+        <table class="table">
             <tbody>
                 <tr>
                     <td> <img style="height:20px;margin: 0;" src="https://vcantech.github.io/mathello-sign/img/with-regards.png" alt=""></td>
                 </tr>
                 <tr>
-                    <td>
-                        <div>
+                    <td style="width: 294px;">
+                        <div style="width: 294px;">
                             <table>
                                 <tbody>
                                     <tr>
@@ -58,53 +58,54 @@
                             </table>
                         </div>
                     </td>
-                    <td style="padding: 0;"><img src="https://vcantech.github.io/mathello-sign/img/arrow-design.png" style="height: 50px;margin: 0;" alt=""></td>
-
-                    <td>
-                        <table>
-                            <tbody>
-                                <tr></tr>
-                                <tr></tr>
-                                <tr></tr>
-                                <tr></tr>
-                                <tr></tr>
-                                <tr></tr>
-                                <tr></tr>
-                                <tr></tr>
-                                <tr></tr>
-                                <tr></tr>
-                                <tr></tr>
-                                <tr></tr>
-                                <tr></tr>
-                                <tr></tr>
-                                <tr></tr>
-                                <tr></tr>
-                                <tr></tr>
-                                <tr></tr>
-                                <tr></tr>
-                                <tr></tr>
-                                <tr></tr>
-                                <tr></tr>
-                                <tr></tr>
-                                <tr></tr>
-                                <tr></tr>
-                                <tr></tr>
-                                <tr></tr>
-                                <tr>
-                                    <td>
-                                        <span><a style="padding: 0;margin: 0;" href="https://www.facebook.com/mathellogenius" target="_blank"><img src="https://vcantech.github.io/mathello-sign/img/facebook.png" alt="" style="height:23px;margin:0;"></a></span>
-                                        <span><a style="padding: 0;margin: 0;" href="https://www.instagram.com/mathellogenius" target="_blank"><img src="https://vcantech.github.io/mathello-sign/img/instagram.png" alt="" style="height:23px;margin:0;"></a></span>
-                                        <span><a style="padding: 0;margin: 0;" href="https://www.twitter.com/mathellogenius" target="_blank"><img src="https://vcantech.github.io/mathello-sign/img/twitter.png" alt="" style="height:23px;margin:0;"></a></span>
-                                        <span><a style="padding: 0;margin: 0;" href="https://www.linkedin.com/company/mathello" target="_blank"><img src="https://vcantech.github.io/mathello-sign/img/linkdin.png" alt="" style="height:23px;margin:0;"></a></span>
-                                        <span><a style="padding: 0;margin: 0;" href="https://www.youtube.com/@mathellogenius" target="_blank"><img src="https://vcantech.github.io/mathello-sign/img/youtube.png" alt="" style="height:23px;margin:0;"></a></span>
-                                    </td>
-                                </tr>
-                                <!-- <tr>
+                    <!-- <td style="padding: 0;"><img src="https://vcantech.github.io/mathello-sign/img/arrow-design.png" style="height: 50px;margin: 0;" alt=""></td> -->
+                    <td style="width: 170px;">
+                        <div style="width: 170px;">
+                            <table>
+                                <tbody>
+                                    <tr></tr>
+                                    <tr></tr>
+                                    <tr></tr>
+                                    <tr></tr>
+                                    <tr></tr>
+                                    <tr></tr>
+                                    <tr></tr>
+                                    <tr></tr>
+                                    <tr></tr>
+                                    <tr></tr>
+                                    <tr></tr>
+                                    <tr></tr>
+                                    <tr></tr>
+                                    <tr></tr>
+                                    <tr></tr>
+                                    <tr></tr>
+                                    <tr></tr>
+                                    <tr></tr>
+                                    <tr></tr>
+                                    <tr></tr>
+                                    <tr></tr>
+                                    <tr></tr>
+                                    <tr></tr>
+                                    <tr></tr>
+                                    <tr></tr>
+                                    <tr></tr>
+                                    <tr></tr>
+                                    <tr>
+                                        <td>
+                                            <span><a style="padding: 0;margin: 0;" href="https://www.facebook.com/mathellogenius" target="_blank"><img src="https://vcantech.github.io/mathello-sign/img/facebook.png" alt="" style="height:23px;margin:0;"></a></span>
+                                            <span><a style="padding: 0;margin: 0;" href="https://www.instagram.com/mathellogenius" target="_blank"><img src="https://vcantech.github.io/mathello-sign/img/instagram.png" alt="" style="height:23px;margin:0;"></a></span>
+                                            <span><a style="padding: 0;margin: 0;" href="https://www.twitter.com/mathellogenius" target="_blank"><img src="https://vcantech.github.io/mathello-sign/img/twitter.png" alt="" style="height:23px;margin:0;"></a></span>
+                                            <span><a style="padding: 0;margin: 0;" href="https://www.linkedin.com/company/mathello" target="_blank"><img src="https://vcantech.github.io/mathello-sign/img/linkdin.png" alt="" style="height:23px;margin:0;"></a></span>
+                                            <span><a style="padding: 0;margin: 0;" href="https://www.youtube.com/@mathellogenius" target="_blank"><img src="https://vcantech.github.io/mathello-sign/img/youtube.png" alt="" style="height:23px;margin:0;"></a></span>
+                                        </td>
+                                    </tr>
+                                    <!-- <tr>
                                     
                                     <td><img src="https://vcantech.github.io/mathello-sign/img/@mathellogenius.png" style="    height: 15.15px;" alt=""></td>
                                 </tr> -->
-                            </tbody>
-                        </table>
+                                </tbody>
+                            </table>
+                        </div>
                     </td>
                     <td style="border-radius: 1px solid black;">
                         <a href="https://mathellogenius.com" target="_blank"><img src="https://vcantech.github.io/mathello-sign/img/mathello-logo.png" alt="" style="height: 70px;margin: 0;"></a>
@@ -112,7 +113,29 @@
                 </tr>
             </tbody>
         </table>
-        <div style="background-color: #11AC9A; border-radius: 3px; padding: 0px 0 0 3px; width: 750px;    height: 25px;">
+
+        <!-- <table style="background-color: #11AC9A; border-radius: 3px; padding: 0px 0 0 3px; width: 750px;    height: 25px;">
+            <tbody>
+                <tr>
+
+                    <td style="padding: 0;"> <span><a href="https://wa.me/971509834557" ><img src="https://vcantech.github.io/mathello-sign/img/whatsapp.png" style="height: 14px;margin: 0;" alt=""></a></span></td>
+
+
+                    <td style="padding: 0;">
+                        <span>
+                            <a href="mailto:sreenevas@ikeneducation.com"><img src="./img/sreenevas-km-Iyengar/sreenevas-km-iyengar-email.png" style="height: 14px;margin: 0;" alt=""></a>
+                        </span>
+                    </td>
+                    <td style="padding: 0;">
+                        <img src="https://vcantech.github.io/mathello-sign/img/color-box1.png" style="height: 25px;margin: 0;" alt="">
+                    </td>
+                    <td style="padding: 0;">
+                        <a href="https://mathellogenius.com" target="_blank"><img src="https://vcantech.github.io/mathello-sign/img/website.png" style="height: 14px;margin-left: 5px;margin: 0;" alt=""></a>
+                    </td>
+                </tr>
+            </tbody>
+        </table> -->
+        <div style="background-color: #11AC9A; border-radius: 3px; padding: 0px 0 0 3px; width: 690px;    height: 25px;">
             <table style="border-spacing: 0;">
                 <tbody>
                     <tr style="padding: 0;">
@@ -125,7 +148,7 @@
                         <td></td>
                         <td style="padding: 0;">
                             <span>
-                                <a href="mailto:sreenevas@ikeneducation.com"><img src="https://vcantech.github.io/mathello-sign/img/sreenevas-km-Iyengar/sreenevas-km-iyengar-email.png" style="height: 15px;margin: 0;" alt=""></a>
+                                <a href="mailto:sreenevas@ikeneducation.com"><img src="./img/sreenevas-km-Iyengar/sreenevas-km-iyengar-email.png" style="height: 14px;margin: 0;" alt=""></a>
                             </span>
                         </td>
                         <td></td>
@@ -162,11 +185,14 @@
                         <td></td>
                         <td></td>
                         <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
 
                         <td style="padding: 0;">
                             <a href="https://mathellogenius.com" target="_blank"><img src="https://vcantech.github.io/mathello-sign/img/website.png" style="height: 14px;margin-left: 5px;margin: 0;" alt=""></a>
                         </td>
-                        <!-- <td style="padding: 0;"><img src="https://vcantech.github.io/mathello-sign/img/color-box.png" style="height: 28px;" alt=""></td> -->
                     </tr>
                 </tbody>
             </table>
