--- a/sreenevas-km-Iyengar.html
+++ b/sreenevas-km-Iyengar.html
@@ -21,8 +21,8 @@
                     <td> <img style="height:20px;margin: 0;" src="https://vcantech.github.io/mathello-sign/img/with-regards.png" alt=""></td>
                 </tr>
                 <tr>
-                    <td>
-                        <div>
+                    <td style="width: 255px;">
+                        <div style="width: 255px;">
                             <table>
                                 <tbody>
                                     <tr>
@@ -60,51 +60,52 @@
                     </td>
                     <td style="padding: 0;"><img src="https://vcantech.github.io/mathello-sign/img/arrow-design.png" style="height: 50px;margin: 0;" alt=""></td>
 
-                    <td>
-                        <table>
-                            <tbody>
-                                <tr></tr>
-                                <tr></tr>
-                                <tr></tr>
-                                <tr></tr>
-                                <tr></tr>
-                                <tr></tr>
-                                <tr></tr>
-                                <tr></tr>
-                                <tr></tr>
-                                <tr></tr>
-                                <tr></tr>
-                                <tr></tr>
-                                <tr></tr>
-                                <tr></tr>
-                                <tr></tr>
-                                <tr></tr>
-                                <tr></tr>
-                                <tr></tr>
-                                <tr></tr>
-                                <tr></tr>
-                                <tr></tr>
-                                <tr></tr>
-                                <tr></tr>
-                                <tr></tr>
-                                <tr></tr>
-                                <tr></tr>
-                                <tr></tr>
-                                <tr>
-                                    <td>
-                                        <span><a style="padding: 0;margin: 0;" href="https://www.facebook.com/mathellogenius" target="_blank"><img src="https://vcantech.github.io/mathello-sign/img/facebook.png" alt="" style="height:23px;margin:0;"></a></span>
-                                        <span><a style="padding: 0;margin: 0;" href="https://www.instagram.com/mathellogenius" target="_blank"><img src="https://vcantech.github.io/mathello-sign/img/instagram.png" alt="" style="height:23px;margin:0;"></a></span>
-                                        <span><a style="padding: 0;margin: 0;" href="https://www.twitter.com/mathellogenius" target="_blank"><img src="https://vcantech.github.io/mathello-sign/img/twitter.png" alt="" style="height:23px;margin:0;"></a></span>
-                                        <span><a style="padding: 0;margin: 0;" href="https://www.linkedin.com/company/mathello" target="_blank"><img src="https://vcantech.github.io/mathello-sign/img/linkdin.png" alt="" style="height:23px;margin:0;"></a></span>
-                                        <span><a style="padding: 0;margin: 0;" href="https://www.youtube.com/@mathellogenius" target="_blank"><img src="https://vcantech.github.io/mathello-sign/img/youtube.png" alt="" style="height:23px;margin:0;"></a></span>
-                                    </td>
-                                </tr>
-                                <!-- <tr>
+                    <td style="width: 170px;">
+                        <div style="width: 170px;">
+                            <table>
+                                <tbody>
+                                    <tr></tr>
+                                    <tr></tr>
+                                    <tr></tr>
+                                    <tr></tr>
+                                    <tr></tr>
+                                    <tr></tr>
+                                    <tr></tr>
+                                    <tr></tr>
+                                    <tr></tr>
+                                    <tr></tr>
+                                    <tr></tr>
+                                    <tr></tr>
+                                    <tr></tr>
+                                    <tr></tr>
+                                    <tr></tr>
+                                    <tr></tr>
+                                    <tr></tr>
+                                    <tr></tr>
+                                    <tr></tr>
+                                    <tr></tr>
+                                    <tr></tr>
+                                    <tr></tr>
+                                    <tr></tr>
+                                    <tr></tr>
+                                    <tr></tr>
+                                    <tr></tr>
+                                    <tr></tr>
+                                    <tr>
+                                        <td>
+                                            <span><a style="padding: 0;margin: 0;" href="https://www.facebook.com/mathellogenius" target="_blank"><img src="https://vcantech.github.io/mathello-sign/img/facebook.png" alt="" style="height:23px;margin:0;"></a></span>
+                                            <span><a style="padding: 0;margin: 0;" href="https://www.instagram.com/mathellogenius" target="_blank"><img src="https://vcantech.github.io/mathello-sign/img/instagram.png" alt="" style="height:23px;margin:0;"></a></span>
+                                            <span><a style="padding: 0;margin: 0;" href="https://www.twitter.com/mathellogenius" target="_blank"><img src="https://vcantech.github.io/mathello-sign/img/twitter.png" alt="" style="height:23px;margin:0;"></a></span>
+                                            <span><a style="padding: 0;margin: 0;" href="https://www.linkedin.com/company/mathello" target="_blank"><img src="https://vcantech.github.io/mathello-sign/img/linkdin.png" alt="" style="height:23px;margin:0;"></a></span>
+                                            <span><a style="padding: 0;margin: 0;" href="https://www.youtube.com/@mathellogenius" target="_blank"><img src="https://vcantech.github.io/mathello-sign/img/youtube.png" alt="" style="height:23px;margin:0;"></a></span>
+                                        </td>
+                                    </tr>
+                                    <!-- <tr>
                                     
                                     <td><img src="https://vcantech.github.io/mathello-sign/img/@mathellogenius.png" style="    height: 15.15px;" alt=""></td>
                                 </tr> -->
-                            </tbody>
-                        </table>
+                                </tbody>
+                            </table>
                     </td>
                     <td style="border-radius: 1px solid black;">
                         <a href="https://mathellogenius.com" target="_blank"><img src="https://vcantech.github.io/mathello-sign/img/mathello-logo.png" alt="" style="height: 70px;margin: 0;"></a>
@@ -171,7 +172,7 @@
                 </tbody>
             </table>
         </div>
-    </div>
+        </div>
 </body>
 
 </html>
