--- a/sreenevas-km-Iyengar.html
+++ b/sreenevas-km-Iyengar.html
@@ -124,9 +124,9 @@
                         <td></td>
                         <td></td>
                         <td></td>
-                        <td style="padding: 0;">
+                        <td style="padding: 0;width: 194px;">
                             <span>
-                                <a href="mailto:sreenevas@ikeneducation.com"><img src="https://vcantech.github.io/mathello-sign/img/sreenevas-km-Iyengar/sreenevas-km-iyengar-email.png" style="height: 14px;margin: 0;" alt=""></a>
+                                <a href="mailto:sreenevas@ikeneducation.com"><img src="https://vcantech.github.io/mathello-sign/img/sreenevas-km-Iyengar/sreenevas-km-iyengar-email.png" style="    height: 13.5px;margin: 0;" alt=""></a>
                             </span>
                         </td>
                         <td></td>
@@ -146,6 +146,9 @@
                         <td style="padding: 0;">
                             <img src="https://vcantech.github.io/mathello-sign/img/color-box1.png" style="height: 25px;margin: 0;" alt="">
                         </td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
                         <td></td>
                         <td></td>
                         <td></td>
