--- a/sreenevas-km-Iyengar.html
+++ b/sreenevas-km-Iyengar.html
@@ -119,7 +119,7 @@
                         <td></td>
                         <td></td>
                         <td></td>
-                        <td style="padding: 0;"> <span><a href="https://wa.me/971509834557" ><img src="https://vcantech.github.io/mathello-sign/img/whatsapp.png" style="height: 14px;margin: 0;" alt=""></a></span></td>
+                        <td style="padding: 0;"> <span><a href="https://wa.me/971509834557" ><img src="https://vcantech.github.io/mathello-sign/img/whatsapp.png" style="margin: 0;" alt=""></a></span></td>
                         <td></td>
                         <td></td>
                         <td></td>
