--- a/sreenevas-km-Iyengar.html
+++ b/sreenevas-km-Iyengar.html
@@ -43,7 +43,7 @@
                                                         <table>
                                                             <tr>
                                                                 <td>
-                                                                    <a href="tel:+971507783229" style="margin-right: 5px; "><img src="https://vcantech.github.io/mathello-sign/img/sreenevas-km-Iyengar/sreenevas-km-iyengar-phone.png" style="height: 17px;margin: 0;" alt=""> </a>
+                                                                    <a href="tel:+971507783229" style="margin-right: 5px; "><img src="https://vcantech.github.io/mathello-sign/img/sreenevas-km-Iyengar/sreenevas-km-iyengar-phone.png" style="margin: 0;" alt=""> </a>
                                                                 </td>
 
                                                             </tr>
@@ -125,7 +125,7 @@
                         <td></td>
                         <td style="padding: 0;width: 194px;">
                             <span>
-                                <a href="mailto:sreenevas@ikeneducation.com"><img src="https://vcantech.github.io/mathello-sign/img/sreenevas-km-Iyengar/sreenevas-km-iyengar-email.png" style="    height: 13.5px;margin: 0;" alt=""></a>
+                                <a href="mailto:sreenevas@ikeneducation.com"><img src="https://vcantech.github.io/mathello-sign/img/sreenevas-km-Iyengar/sreenevas-km-iyengar-email.png" style="margin: 0;" alt=""></a>
                             </span>
                         </td>
                         <td></td>
@@ -138,9 +138,7 @@
                         <td></td>
                         <td></td>
                         <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
+
 
                         <td style="padding: 0;">
                             <img src="https://vcantech.github.io/mathello-sign/img/color-box1.png" style="height: 25px;margin: 0;" alt="">
@@ -167,7 +165,7 @@
                         <td></td>
 
                         <td style="padding: 0;">
-                            <a href="https://mathellogenius.com" target="_blank"><img src="https://vcantech.github.io/mathello-sign/img/website.png" style="height: 14px;margin-left: 5px;margin: 0;" alt=""></a>
+                            <a href="https://mathellogenius.com" target="_blank"><img src="https://vcantech.github.io/mathello-sign/img/website.png" style="margin-left: 5px;margin: 0;" alt=""></a>
                         </td>
                         <!-- <td style="padding: 0;"><img src="https://vcantech.github.io/mathello-sign/img/color-box.png" style="height: 28px;" alt=""></td> -->
                     </tr>
