--- a/sreenevas-km-Iyengar.html
+++ b/sreenevas-km-Iyengar.html
@@ -13,28 +13,28 @@
 
 <body>
 
-    <div style="width:800px">
-        <table class="table" style="min-width:97%;">
+    <div>
+        <table class="table" style="width: 590px;">
             <tbody>
                 <tr>
-                    <td> <img style="height:20px;margin: 0;" src="https://vcantech.github.io/mathello-sign/img/with-regards.png" alt=""></td>
+                    <td> <img style="margin: 0;" src="https://vcantech.github.io/mathello-sign/img/with-regards.png" alt=""></td>
                 </tr>
                 <tr>
-                    <td style="width: 255px;">
-                        <div style="width: 255px;">
+                    <td style="width: 218px;">
+                        <div style="width: 218px;">
                             <table>
                                 <tbody>
                                     <tr>
                                         <td>
                                             <tr>
                                                 <td>
-                                                    <img style="height: 21.6px; margin: 0;" src="https://vcantech.github.io/mathello-sign/img/sreenevas-km-Iyengar/sreenevas-km-Iyengar.png" alt="">
+                                                    <img style=" margin: 0;" src="https://vcantech.github.io/mathello-sign/img/sreenevas-km-Iyengar/sreenevas-km-Iyengar.png" alt="">
                                                 </td>
 
                                             </tr>
                                             <tr>
                                                 <td>
-                                                    <img style="height: 14px; margin: 0;" src="https://vcantech.github.io/mathello-sign/img/sreenevas-km-Iyengar/sreenevas-km-Iyengar-d.png" alt="">
+                                                    <img style=" margin: 0;" src="https://vcantech.github.io/mathello-sign/img/sreenevas-km-Iyengar/sreenevas-km-Iyengar-d.png" alt="">
                                                 </td>
                                             </tr>
                                             <tr>
@@ -57,11 +57,11 @@
                             </table>
                         </div>
                     </td>
-                    <td style="padding: 0;"><img src="https://vcantech.github.io/mathello-sign/img/arrow-design.png" style="height: 50px;margin: 0;" alt=""></td>
+                    <td style="padding: 0;"><img src="https://vcantech.github.io/mathello-sign/img/arrow-design.png" style="margin: 0;" alt=""></td>
 
-                    <td style="width: 170px;">
-                        <div style="width: 170px;">
-                            <table>
+                    <td style="width: 117px;">
+                        <div style="width: 117px;">
+                            <table style="width: 117px;">
                                 <tbody>
                                     <tr></tr>
                                     <tr></tr>
@@ -92,11 +92,11 @@
                                     <tr></tr>
                                     <tr>
                                         <td>
-                                            <span><a style="padding: 0;margin: 0;" href="https://www.facebook.com/mathellogenius" target="_blank"><img src="https://vcantech.github.io/mathello-sign/img/facebook.png" alt="" style="height:23px;margin:0;"></a></span>
-                                            <span><a style="padding: 0;margin: 0;" href="https://www.instagram.com/mathellogenius" target="_blank"><img src="https://vcantech.github.io/mathello-sign/img/instagram.png" alt="" style="height:23px;margin:0;"></a></span>
-                                            <span><a style="padding: 0;margin: 0;" href="https://www.twitter.com/mathellogenius" target="_blank"><img src="https://vcantech.github.io/mathello-sign/img/twitter.png" alt="" style="height:23px;margin:0;"></a></span>
-                                            <span><a style="padding: 0;margin: 0;" href="https://www.linkedin.com/company/mathello" target="_blank"><img src="https://vcantech.github.io/mathello-sign/img/linkdin.png" alt="" style="height:23px;margin:0;"></a></span>
-                                            <span><a style="padding: 0;margin: 0;" href="https://www.youtube.com/@mathellogenius" target="_blank"><img src="https://vcantech.github.io/mathello-sign/img/youtube.png" alt="" style="height:23px;margin:0;"></a></span>
+                                            <span><a style="padding: 0;margin: 0;" href="https://www.facebook.com/mathellogenius" target="_blank"><img src="https://vcantech.github.io/mathello-sign/img/facebook.png" alt="" style="margin:0;"></a></span>
+                                            <span><a style="padding: 0;margin: 0;" href="https://www.instagram.com/mathellogenius" target="_blank"><img src="https://vcantech.github.io/mathello-sign/img/instagram.png" alt="" style="margin:0;"></a></span>
+                                            <span><a style="padding: 0;margin: 0;" href="https://www.twitter.com/mathellogenius" target="_blank"><img src="https://vcantech.github.io/mathello-sign/img/twitter.png" alt="" style="margin:0;"></a></span>
+                                            <span><a style="padding: 0;margin: 0;" href="https://www.linkedin.com/company/mathello" target="_blank"><img src="https://vcantech.github.io/mathello-sign/img/linkdin.png" alt="" style="margin:0;"></a></span>
+                                            <span><a style="padding: 0;margin: 0;" href="https://www.youtube.com/@mathellogenius" target="_blank"><img src="https://vcantech.github.io/mathello-sign/img/youtube.png" alt="" style="margin:0;"></a></span>
                                         </td>
                                     </tr>
                                     <!-- <tr>
@@ -107,12 +107,12 @@
                             </table>
                     </td>
                     <td style="border-radius: 1px solid black;">
-                        <a href="https://mathellogenius.com" target="_blank"><img src="https://vcantech.github.io/mathello-sign/img/mathello-logo.png" alt="" style="height: 70px;margin: 0;"></a>
+                        <a href="https://mathellogenius.com" target="_blank"><img src="https://vcantech.github.io/mathello-sign/img/mathello-logo.png" alt="" style="margin: 0;"></a>
                     </td>
                 </tr>
             </tbody>
         </table>
-        <div style="background-color: #11AC9A; border-radius: 3px; padding: 0px 0 0 3px; width: 715px;    height: 25px;">
+        <div style="background-color: #11AC9A; border-radius: 3px; padding: 0px 0 0 3px; width: 590px;    height: 27px;">
             <table style="border-spacing: 0;">
                 <tbody>
                     <tr style="padding: 0;">
@@ -123,7 +123,7 @@
                         <td></td>
                         <td></td>
                         <td></td>
-                        <td style="padding: 0;width: 194px;">
+                        <td style="padding: 0;">
                             <span>
                                 <a href="mailto:sreenevas@ikeneducation.com"><img src="https://vcantech.github.io/mathello-sign/img/sreenevas-km-Iyengar/sreenevas-km-iyengar-email.png" style="margin: 0;" alt=""></a>
                             </span>
@@ -138,10 +138,8 @@
                         <td></td>
                         <td></td>
                         <td></td>
-
-
                         <td style="padding: 0;">
-                            <img src="https://vcantech.github.io/mathello-sign/img/color-box1.png" style="height: 25px;margin: 0;" alt="">
+                            <img src="https://vcantech.github.io/mathello-sign/img/color-box1.png" style="margin: 0;height: 27px; width: 105px;" alt="">
                         </td>
                         <td></td>
                         <td></td>
@@ -151,23 +149,12 @@
                         <td></td>
                         <td></td>
                         <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
+
 
                         <td style="padding: 0;">
                             <a href="https://mathellogenius.com" target="_blank"><img src="https://vcantech.github.io/mathello-sign/img/website.png" style="margin-left: 5px;margin: 0;" alt=""></a>
                         </td>
-                        <!-- <td style="padding: 0;"><img src="https://vcantech.github.io/mathello-sign/img/color-box.png" style="height: 28px;" alt=""></td> -->
+                        <!-- <td style="padding: 0;"><img src="https://vcantech.github.io/mathello-sign/img/color-box.png" style="" alt=""></td> -->
                     </tr>
                 </tbody>
             </table>
