--- a/sreenevas-km-Iyengar copy.html
+++ b/sreenevas-km-Iyengar copy.html
@@ -63,33 +63,12 @@
                         <div style="width: 170px;">
                             <table>
                                 <tbody>
-                                    <tr></tr>
-                                    <tr></tr>
-                                    <tr></tr>
-                                    <tr></tr>
-                                    <tr></tr>
-                                    <tr></tr>
-                                    <tr></tr>
-                                    <tr></tr>
-                                    <tr></tr>
-                                    <tr></tr>
-                                    <tr></tr>
-                                    <tr></tr>
-                                    <tr></tr>
-                                    <tr></tr>
-                                    <tr></tr>
-                                    <tr></tr>
-                                    <tr></tr>
-                                    <tr></tr>
-                                    <tr></tr>
-                                    <tr></tr>
-                                    <tr></tr>
-                                    <tr></tr>
-                                    <tr></tr>
-                                    <tr></tr>
-                                    <tr></tr>
-                                    <tr></tr>
-                                    <tr></tr>
+                                    <tr>
+                                        <td>
+                                            <img src="https://vcantech.github.io/mathello-sign/img/trans-box.png" alt="">
+                                        </td>
+                                    </tr>
+
                                     <tr>
                                         <td>
                                             <span><a style="padding: 0;margin: 0;" href="https://www.facebook.com/mathellogenius" target="_blank"><img src="https://vcantech.github.io/mathello-sign/img/facebook.png" alt="" style="height:23px;margin:0;"></a></span>
