--- a/sreenevas-km-Iyengar.html
+++ b/sreenevas-km-Iyengar.html
@@ -104,7 +104,7 @@
                         <td></td>
                         <td style="padding: 0;">
                             <span>
-                                <a href="mailto:sreenevas@ikeneducation.com"><img src="https://vcantech.github.io/mathello-sign/img/toll-free.png.png" style="margin: 0;" alt=""></a>
+                                <a href="mailto:sreenevas@ikeneducation.com"><img src="https://vcantech.github.io/mathello-sign/img/toll-free.png" style="margin: 0;" alt=""></a>
                             </span>
                         </td>
                         <td></td>
