--- a/index.html
+++ b/index.html
@@ -19,6 +19,12 @@
         <li>
             <a href="https://vcantech.github.io/mathello-sign/bhanu-prakash.html" target="_blank">bhanu-prakash</a>
         </li>
+        <li>
+            <a href="https://vcantech.github.io/mathello-sign/rajeswari-prakash.html" target="_blank">rajeswari-prakash</a>
+        </li>
+        <li>
+            <a href="https://vcantech.github.io/mathello-sign/sridevi-d.html" target="_blank">sridevi-d</a>
+        </li>
     </ol>
 </body>
 
