--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
         <li>
             <a href="https://vcantech.github.io/mathello-sign/sridevi-d.html" target="_blank">sridevi-d</a>
         </li>
+        <li>
+            <a href="https://vcantech.github.io/mathello-sign/jamal-mohamed.html" target="_blank">jamal-mohamed</a>
+        </li>
     </ol>
 </body>
 
