--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
         <li>
             <a href="https://vcantech.github.io/mathello-sign/jamal-mohamed.html" target="_blank">jamal-mohamed</a>
         </li>
+        <li>
+            <a href="https://vcantech.github.io/mathello-sign/naeemuddin-kachwala.html" target="_blank">naeemuddin-kachwala</a>
+        </li>
     </ol>
 </body>
 
