--- a/index.html
+++ b/index.html
@@ -31,6 +31,12 @@
         <li>
             <a href="https://vcantech.github.io/mathello-sign/naeemuddin-kachwala.html" target="_blank">naeemuddin-kachwala</a>
         </li>
+        <li>
+            <a href="https://vcantech.github.io/mathello-sign/padmanath.html" target="_blank">padmanath</a>
+        </li>
+        <li>
+            <a href="https://vcantech.github.io/mathello-sign/kavita-purshottamani.html" target="_blank">kavita-purshottamani</a>
+        </li>
     </ol>
 </body>
 
