--- a/kavita-purshottamani.html
+++ b/kavita-purshottamani.html
@@ -65,7 +65,7 @@
                                 <tbody>
                                     <tr>
                                         <td>
-                                            <img src="https://vcantech.github.io/mathello-sign/img/trans-box.png" style="height: 40px;" alt="">
+                                            <img src="https://vcantech.github.io/mathello-sign/img/trans-box.png" style="height: 42px;" alt="">
                                         </td>
                                     </tr>
 
@@ -86,7 +86,7 @@
                             </table>
                     </td>
                     <td style="border-radius: 1px solid black;">
-                        <a href="https://mathellogenius.com" target="_blank"><img src="https://vcantech.github.io/mathello-sign/img/mathello-logo.png" alt="" style="margin: 0;"></a>
+                        <a href="https://mathellogenius.com" target="_blank"><img src="https://vcantech.github.io/mathello-sign/img/mathello-logo.png" alt="" style="margin: 0px 0 0 0;"></a>
                     </td>
                 </tr>
             </tbody>
