--- a/sreenevas-km-Iyengar.html
+++ b/sreenevas-km-Iyengar.html
@@ -17,7 +17,7 @@
         <table class="table" style="width: 590px;">
             <tbody>
                 <tr>
-                    <td> <img style="margin: 0;" src="https://vcantech.github.io/mathello-sign/img/with-regards.png" alt=""></td>
+                    <td> <img style="margin: 0px 0 -6px 0;" src="https://vcantech.github.io/mathello-sign/img/with-regards.png" alt=""></td>
                 </tr>
                 <tr>
                     <td style="width: 218px;">
@@ -28,13 +28,13 @@
                                         <td>
                                             <tr>
                                                 <td>
-                                                    <img style=" margin: 0;" src="https://vcantech.github.io/mathello-sign/img/sreenevas-km-Iyengar/sreenevas-km-Iyengar.png" alt="">
+                                                    <img style="margin: 0px 0 -11px 0;" src="https://vcantech.github.io/mathello-sign/img/sreenevas-km-Iyengar/sreenevas-km-Iyengar.png" alt="">
                                                 </td>
 
                                             </tr>
                                             <tr>
                                                 <td>
-                                                    <img style=" margin: 0;" src="https://vcantech.github.io/mathello-sign/img/sreenevas-km-Iyengar/sreenevas-km-Iyengar-d.png" alt="">
+                                                    <img style="margin: 0px 0 -5px 0;" src="https://vcantech.github.io/mathello-sign/img/sreenevas-km-Iyengar/sreenevas-km-Iyengar-d.png" alt="">
                                                 </td>
                                             </tr>
                                             <tr>
@@ -98,13 +98,13 @@
                         <td></td>
                         <td></td>
                         <td></td>
-                        <td style="padding: 0;"> <span><a href="https://wa.me/971509834557" ><img src="https://vcantech.github.io/mathello-sign/img/whatsapp.png" style="margin: 0;" alt=""></a></span></td>
+                        <td style="padding: 0;"> <span><a href="https://wa.me/971509834557" ><img src="https://vcantech.github.io/mathello-sign/img/whatsapp.png" style="margin: 0;padding-bottom: 1px;" alt=""></a></span></td>
                         <td></td>
                         <td></td>
                         <td></td>
                         <td style="padding: 0;">
                             <span>
-                                <a href="tel:+1800222287"><img src="https://vcantech.github.io/mathello-sign/img/toll-free.png" style="margin: 0;" alt=""></a>
+                                <a href="tel:+1800222287"><img src="https://vcantech.github.io/mathello-sign/img/toll-free.png" style="margin: 0;padding-bottom: 1px;" alt=""></a>
                             </span>
                         </td>
                         <td></td>
